name:                grid
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/skybirdsoar/grid#readme
license:             BSD3
license-file:        LICENSE
author:              SkyBirdSoar
maintainer:          example@example.com
copyright:           2016 SkyBirdSoar
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Canvas
                     , Tile
                     , Generator
  build-depends:       base >= 4.7 && < 5
                     , random
                     , containers
                     , aeson
  default-language:    Haskell2010

executable grid-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , grid
                     , random
                     , optparse-applicative
                     , aeson
                     , bytestring
  default-language:    Haskell2010

test-suite grid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/grid
